--- a/index.html
+++ b/index.html
@@ -73,5 +73,51 @@
             </div>
         </div>
     </section>
+    <section id="about">
+        <p class="section__text__p1">Get To Know More</p>
+        <h1 class="title">About me</h1>
+        <div class="section-container">
+            <div class="section__pic-container">
+                <img 
+                    src="./assets/about-pic.png" 
+                    alt="Profile picture"
+                    class="about-pic"
+                />
+            </div>
+            <div class="about-details-container">
+                <div class="about-containers">
+                    <div class="details-container">
+                        <img src="./assets/education.png" 
+                            alt="Education icon"
+                            class="icon"
+                        />
+                        <h3>Education</h3>
+                        <p>Studying Bachelor of Computer Science <br>Amirkabir University of Thechnology</p>
+                    </div>
+                </div>
+                <div class="text-container">
+                    <p>
+                        I am a Computer Science student at 
+                        Amirkabir University of Technology (AUT) 
+                        with a strong foundation in algorithms, 
+                        data structures, and computational theory. 
+                        My main interests are quantum computing, 
+                        algorithm design, and game development, 
+                        where I enjoy combining technical problem-solving 
+                        with creativity. I have experience in research, 
+                        teaching, and hands-on projects, 
+                        and I’m always eager to explore new ways to apply 
+                        computer science to real-world challenges.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <img 
+            src="./assets/arrow.png" 
+            alt="Arrow icon" 
+            class="icon arrow"
+            onclick="location.href='./#experience'"
+        />
+    </section>
 </body>
 </html>
