--- a/index.html
+++ b/index.html
@@ -311,5 +311,24 @@
             onclick="location.href='./#contact'"
         />
     </section>
+    <section id="contact">
+        <p class="section__text__p1">Get in Touch</p>
+        <h1 class="title">Contact Me</h1>
+        <div class="contact-info-upper-container">
+            <div class="contact-info-container">
+                <img src="./assets/email.png" 
+                alt="Email icon"
+                class="email-icon icon contact-icon"
+                />
+                <p><a href="mailto:arad.sajjadi@gmail.com">arad.sajjadi@gmail.com</a></p>
+            </div>
+            <div class="contact-info-container">
+                <img src="./assets/linkedin.png" 
+                alt="linkedin icon"
+                class="icon contact-icon"
+                />
+                <p><a href="https://www.linkedin.com/in/arad-sajjadi-5a1922257/">LinkedIn</a></p>
+            </div>
+    </section>
 </body>
 </html>
