--- a/index.html
+++ b/index.html
@@ -256,11 +256,11 @@
                     class="project-img"
                     />
                 </div>
-                <h2 class="experience-sub-title project-title">Project One</h2>
+                <h2 class="experience-sub-title project-title">PacMan-Game-Qt-CPP</h2>
                 <div class="btn-container">
                     <button 
                     class="btn btn-color-2 project-btn" 
-                    onclick="location.href='https://github.com/'"
+                    onclick="location.href='https://github.com/aradsj/PacMan-Game-Qt-CPP'"
                     >
                         Github
                     </button>
@@ -269,16 +269,16 @@
                 <div class="details-container color-container">
                 <div class="article-container">
                     <img 
-                    src="./assets/project-2.png" 
+                    src="./assets/project-2.jpg" 
                     alt="Project 2"
                     class="project-img"
                     />
                 </div>
-                <h2 class="experience-sub-title project-title">Project Two</h2>
+                <h2 class="experience-sub-title project-title">Othello</h2>
                 <div class="btn-container">
                     <button 
                     class="btn btn-color-2 project-btn" 
-                    onclick="location.href='https://github.com/'"
+                    onclick="location.href='https://github.com/aradsj/Othello-AI-Minimax-Expectimax'"
                     >
                         Github
                     </button>
@@ -292,11 +292,11 @@
                     class="project-img"
                     />
                 </div>
-                <h2 class="experience-sub-title project-title">Project Three</h2>
+                <h2 class="experience-sub-title project-title">RadioJavan-Data-Analysis</h2>
                 <div class="btn-container">
                     <button 
                     class="btn btn-color-2 project-btn" 
-                    onclick="location.href='https://github.com/'"
+                    onclick="location.href='https://github.com/aradsj/RadioJavan-Music-Data-Analysis'"
                     >
                         Github
                     </button>
